implemented document deletion after certain time

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Paste It</a>
+    <a class="navbar-brand" href="/">LinkifyText</a>
     <button
       class="navbar-toggler"
       type="button"
