--- a/views/view.ejs
+++ b/views/view.ejs
@@ -14,7 +14,6 @@
         <style>
             body {
                 height: 100vh;
-                border: 2 solid #ff0000;
             }
             .paste-container {
                 height: 70%;
@@ -95,17 +94,18 @@
 
         <!-- Footer -->
         <footer class="bg-dark text-center text-white mt-auto">
-            <!-- Copyright -->
             <div
                 class="text-center p-2 author"
                 style="background-color: rgba(100, 100, 100, 0.2)"
             >
                 Made with <span style="color: #e25555">❤</span> by
-                <a class="text-white" href="https://github.cpm/ritik48"
+                <a
+                    class="text-white"
+                    href="https://github.com/ritik48"
+                    target="_blank"
                     >Ritik</a
                 >
             </div>
-            <!-- Copyright -->
         </footer>
         <!-- Footer -->
 
