--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -31,18 +31,22 @@
     <body class="d-flex flex-column min-vh-100">
         <%- include('partials/nav') %>
 
-        <form class="form-floating paste-area m-3" action="/" method="POST">
+        <form
+            class="form-floating paste-area m-3"
+            action="/edit/<%= Text.address %>?_method=PATCH"
+            method="POST"
+        >
             <textarea
                 class="form-control"
                 placeholder="Leave a comment here"
                 id="floatingTextarea"
                 name="text"
                 autofocus
-            ></textarea>
-            <label for="floatingTextarea">Paste the text here.</label>
-            <button type="submit" class="btn btn-success my-3">
-                Create Link
-            </button>
+            >
+<%= Text.text %></textarea
+            >
+            <label for="floatingTextarea">Edit</label>
+            <button type="submit" class="btn btn-success my-3">Edit</button>
         </form>
 
         <footer class="bg-dark text-center text-white mt-auto">
@@ -59,5 +63,11 @@
                 >
             </div>
         </footer>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
