--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,59 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Pate It</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-            crossorigin="anonymous"
-        />
-
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>LinkifyText</title>
+        <link rel="stylesheet" href="/stylesheets/nav.css" />
         <style>
-            body {
-                height: 100vh;
-                border: 2 solid #ff0000;
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
             }
-            .paste-area {
-                height: 70%;
-            }
-            textarea {
-                height: 100% !important;
-                width: 100%;
 
-                border: 2px solid #2f2f2f7e !important;
-                outline: none !important;
+            html,
+            body {
+                height: 100%;
+            }
+
+            body {
+                /* height: 100vh; */
+                font-family: Arial, Helvetica, sans-serif;
+
+                display: flex;
+                flex-direction: column;
+            }
+            .container {
+                max-width: 900px;
+                /* border: 1px solid red; */
+                margin: 0 auto;
+            }
+
+            section {
+                margin-top: 30px;
+                height: 60%;
+            }
+            section .container {
+                height: 100%;
+            }
+
+            section form {
+                height: 100%;
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: center;
+
+                gap: 10px;
+            }
+
+            .textarea-label {
+                position: absolute;
+                top: 20px;
+
+                font-size: 0.9rem;
+                padding-inline: 15px;
+                color: rgb(57, 55, 55);
+                transition: 0.2s ease-in-out;
+            }
+
+            .textarea-label.active {
+                top: 10px;
+
+                font-size: 0.8rem;
+
+                color: grey;
+            }
+
+            textarea {
+                width: 100%;
+                height: 100%;
+
+                resize: none;
+                outline: none;
+                border: 2px solid rgba(80, 80, 81, 0.753);
+                border-radius: 8px;
+
+                padding-inline: 15px;
+                padding-block: 25px;
+
+                font-size: 1rem;
+            }
+
+            textarea:focus {
+                box-shadow: 0 0 2px 3px rgba(114, 191, 219, 0.806);
+            }
+
+            .btn {
+                font-size: 1rem;
+                padding: 0.3em 0.75em;
+
+                color: rgb(0, 0, 0);
+
+                border: 0.7px solid black;
+                border-radius: 2px;
+
+                background-color: rgba(0, 0, 0, 0.139);
+                cursor: pointer;
+            }
+
+            .edit-btn img {
+                width: 18px;
+                margin-top: -4px;
+                margin-left: 3px;
+            }
+
+            .btn:hover {
+                opacity: 0.8;
+            }
+
+            .btn:active {
+                transform: translate(1px, 1px);
+            }
+
+            form img {
+                width: 20px;
+                vertical-align: middle;
+            }
+
+            footer {
+                margin-top: auto;
+                font-family: monospace;
+
+                font-size: 1rem;
+                color: rgb(255, 253, 253);
+                padding: 6px;
+                text-align: center;
+                background-color: rgb(41, 41, 41);
+            }
+
+            footer a {
+                color: rgb(255, 253, 253);
+            }
+
+            @media screen and (max-width: 900px) {
+                .container {
+                    margin-inline: 10px;
+                }
             }
         </style>
     </head>
-    <body class="d-flex flex-column min-vh-100">
-        <%- include('partials/nav') %>
+    <body>
+        <%- include('partials/nav.ejs') %>
+        <section>
+            <div class="container">
+                <form action="/" method="POST">
+                    <textarea name="text" id="" placeholder=""><%= Text.text %></textarea>
 
-        <form
-            class="form-floating paste-area m-3"
-            action="/edit/<%= Text.address %>?_method=PATCH"
-            method="POST"
-        >
-            <textarea
-                class="form-control"
-                placeholder="Leave a comment here"
-                id="floatingTextarea"
-                name="text"
-                autofocus
-            >
-<%= Text.text %></textarea
-            >
-            <label for="floatingTextarea">Edit</label>
-            <button type="submit" class="btn btn-success my-3">Edit</button>
-        </form>
+                    <div class="expires-in mx-3">
+                        Text expires at:
+                        <span class="timer"
+                            ><%= Text.expiresAt.getUTCHours() %>:<%=
+                            Text.expiresAt.getUTCMinutes() %>
+                        </span>
+                    </div>
+
+                    <button type="submit" class="btn edit-btn">
+                        Edit
+                        <img src="/assets/pen-to-square-regular.svg" alt="" />
+                    </button>
+
+                    <span class="textarea-label active">Edit the text here</span>
+                </form>
+            </div>
+        </section>
 
         <footer class="bg-dark text-center text-white mt-auto">
-            <div
-                class="text-center p-2 author"
-                style="background-color: rgba(100, 100, 100, 0.2)"
-            >
+            <div>
                 Made with <span style="color: #e25555">❤</span> by
                 <a
                     class="text-white"
@@ -64,10 +177,19 @@
             </div>
         </footer>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-            crossorigin="anonymous"
-        ></script>
+        <script>
+            const textarea = document.querySelector("textarea");
+            const textarea_label = document.querySelector(".textarea-label");
+
+            textarea.addEventListener("focus", () => {
+                textarea_label.classList.add("active");
+            });
+
+            textarea.addEventListener("blur", (e) => {
+                if (!e.target.value) {
+                    textarea_label.classList.remove("active");
+                }
+            });
+        </script>
     </body>
 </html>
