--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,11 @@
 <nav>
     <div class="container">
-        <div class="brand-text">LinkifyText</div>
-        <a href="/"><img class="add" src="/assets/add.png" alt="" /></a>
+        <div class="left">
+            <div class="brand-text">LinkifyText</div>
+            <a href="/"><img class="add" src="/assets/add.png" alt="" /></a>
+        </div>
+        <p class="mode">
+            <span class="square light"></span>
+        </p>
     </div>
 </nav>
