--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>LinkifyText</title>
         <link rel="stylesheet" href="/stylesheets/nav.css" />
+        <link rel="stylesheet" href="/stylesheets/footer.css" />
+
         <style>
             :root {
                 --primary-color: #000000;
@@ -136,21 +138,6 @@
                 margin-top: 10px;
             }
 
-            footer {
-                margin-top: auto;
-                font-family: monospace;
-
-                font-size: 1rem;
-                color: rgb(255, 253, 253);
-                padding: 6px;
-                text-align: center;
-                background-color: rgb(41, 41, 41);
-            }
-
-            footer a {
-                color: rgb(255, 253, 253);
-            }
-
             @media screen and (max-width: 900px) {
                 .container {
                     margin-inline: 10px;
@@ -187,17 +174,7 @@
             </div>
         </section>
 
-        <footer class="bg-dark text-center text-white mt-auto">
-            <div>
-                Made with <span style="color: #e25555">❤</span> by
-                <a
-                    class="text-white"
-                    href="https://github.com/ritik48"
-                    target="_blank"
-                    >Ritik</a
-                >
-            </div>
-        </footer>
+        <%- include('partials/footer') %>
 
         <script>
             const textarea = document.querySelector("textarea");
