--- a/views/view.ejs
+++ b/views/view.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Pate It</title>
+        <title>LinkifyText</title>
         <link rel="stylesheet" href="/stylesheets/nav.css" />
         <link rel="stylesheet" href="/stylesheets/footer.css" />
 
@@ -186,8 +186,6 @@
         <%- include('partials/footer') %>
 
         <script>
-
-
             // code for copying
             function copyTextToClipboard() {
                 const textarea = document.querySelector("textarea");
