added meta tags

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>LinkifyText</title>
+        <title>Linkify Text - Generate Shareable Links from Text</title>
+        <meta name="description" content="Easily generate shareable links for any text with Linkify Text. Simply paste your text, and instantly create a link to share with others. It's quick, convenient, and hassle-free. Try it now!">
+
         <link rel="stylesheet" href="/stylesheets/nav.css" />
         <link rel="stylesheet" href="/stylesheets/footer.css" />
         <style>
