--- a/views/view.ejs
+++ b/views/view.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>LinkifyText</title>
+        <title>LinkifyText | View Paste Content</title>
         <link rel="stylesheet" href="/stylesheets/nav.css" />
         <link rel="stylesheet" href="/stylesheets/footer.css" />
 
