--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>LinkifyText</title>
+        <meta name="description" content="Page to edit a paste content">
+
+        <title>LinkifyText | Edit</title>
         <link rel="stylesheet" href="/stylesheets/nav.css" />
         <link rel="stylesheet" href="/stylesheets/footer.css" />
 
